--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -60,7 +60,11 @@ a {
     border-radius: 45px;
     background-color: white;
     border: 20px solid #C8C8C8;
-    
+}
+#app-screen {
+    width: 100%;
+    height: 100%;
+    border-radius: 45px;
 }
 #description {
     margin: 0 45px;
