--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -30,6 +31,8 @@ a {
     margin-right: 10px;
 }
 #title span {
+    color: #29c3c4;
+    font-family: 'Goldman', sans-serif;
     font-size: 2.5rem;
     font-weight: 700;
     line-height: 42px;
@@ -43,6 +46,7 @@ a {
     line-height: 40px;
 }
 #app-preview {
+    background-color: #fdc21f;
     margin-top: 80px;
     margin-bottom: 70px;
     width: 100%;
@@ -59,17 +63,20 @@ a {
     margin: 0 35px;
     border-radius: 45px;
     background-color: white;
-    border: 20px solid #C8C8C8;
+    border: 10px solid #050920;
 }
 #app-screen {
     width: 100%;
     height: 100%;
-    border-radius: 45px 45px 25px 25px;
+    border-radius: 45px 45px 35px 35px;
 }
 #description {
+    display: flex;
+    flex-direction: column;
     margin: 0 45px;
 }
 #app-title {
+    font-family: 'Goldman', sans-serif;
     font-size: 2.2rem;
     font-weight: 500;
     line-height: 38px;
@@ -77,24 +84,24 @@ a {
 #app-subtitle {
     color: #f6f6f6;
     font-size: clamp(1.2rem, 1.4rem, 1.45rem);
-    line-height: 8px;
+    line-height: 25px;
     font-weight: 300;
 }
 #description p {
     font-size: 1.1rem;
-    color: #e9e9e9;
+    color: #e9e9e9ec;
 }
-#download {
+#download-section {
     position: relative;
     display: flex;
     flex-direction: row;
     margin-top: 50px;
     margin-left: 38px;
+    margin-bottom: 30px;
 }
 #download-btns {
     -webkit-tap-highlight-color: transparent;
     z-index: 2;
-    margin-bottom: 40px;
     width: max-content;
 }
 .download-btn {
@@ -107,6 +114,9 @@ a {
 }
 #android-download-btn {
     background-color: #61B43E;
+}
+#android-download-btn img {
+    filter: invert();
 }
 #ios-download-btn {
     background-color: white;
@@ -142,4 +152,9 @@ a {
     margin-top: -11px;
     width: 180px;
     transform: rotate(270deg);
+}
+#privacy-policy {
+    width: max-content;
+    margin: 0 auto;
+    color: #ffffffb2;
 }
