--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -1,27 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap');
-
-:root {
-    --bgcolor-blue: #0c9bed;
-    --bgcolor-dark: #010417;
-    --decoration-color: #29c3c4;
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-}
-body {
-    background-color: var(--bgcolor-dark);
-    height: 100vh;
-    width: 100%;
-    position: relative;
-}
-a {
-    text-decoration: none;
-}
 #title {
     position: relative;
     background-color: var(--bgcolor-dark);
@@ -53,24 +29,14 @@ a {
     top: 0;
 }
 #triangle-1 {
-    position: absolute;
-    width: 0;
-    height: 0;
     top: 0;
     left: 0;
-    border-left: 0px solid transparent;
-    border-right: 50px solid transparent;
-    border-top: 50px solid var(--decoration-color);
+    border-top-color: var(--decoration-color);
 }
 #triangle-2 {
-    position: absolute;
-    width: 0;
-    height: 0;
     right: 0;
     bottom: -15px;
-    border-left: 50px solid transparent;
-    border-right: 0 solid transparent;
-    border-bottom: 50px solid #fdc21f;
+    border-top-color: #fdc21f;
 }
 #motto {
     position: relative;
@@ -117,14 +83,9 @@ a {
     padding-top: 70px;
 }
 #triangle-3 {
-    position: absolute;
-    width: 0;
-    height: 0;
     top: -15px;
     left: -45px;
-    border-left: 0px solid transparent;
-    border-right: 50px solid transparent;
-    border-top: 50px solid #fdc21f;
+    border-top-color: #fdc21f;
 }
 #app-title {
     font-family: 'Goldman', sans-serif;
@@ -216,14 +177,9 @@ a {
     position: relative;
 }
 #bottom-triangle {
-    position: absolute;
-    width: 0;
-    height: 0;
     right: 0;
     bottom: 0;
-    border-left: 50px solid transparent;
-    border-right: 0 solid transparent;
-    border-bottom: 50px solid var(--decoration-color);
+    border-top-color: var(--decoration-color);
 }
 #bottom-line {
     position: absolute;
