--- a/styles/style.css
+++ b/styles/style.css
@@ -49,3 +49,10 @@ a {
 .deg270{
     transform: rotate(270deg);
 }
+
+.decoration-lines{
+    position: absolute;
+    width: 100%;    
+    height: 8px;
+    background-color: var(--decoration-color);
+}
