--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ a {
     text-decoration: none;
 }
 
+
 .triangle{
     position: absolute;
     width: 0;
@@ -55,4 +56,23 @@ a {
     width: 100%;    
     height: 8px;
     background-color: var(--decoration-color);
+}
+
+.download-btn {
+    display: flex;
+    align-items: center;
+    height: 75px;
+    width: 200px;
+    border-radius: 18px;
+    margin-bottom: 23px;
+}
+
+.download-in-txt {
+    margin-top: 12px;
+    line-height: 10px;
+    font-size: 1.2rem;
+}
+.os-store {
+    font-size: 1.45rem;
+    font-weight: 500;
 }
