--- a/styles/desktop_style.css
+++ b/styles/desktop_style.css
@@ -20,8 +20,17 @@
 		display: block !important;
 	}
 
-	#app-preview, #download-app{
-/* 		width: 50% !important; */
+	#smartphone {
+		width: 100%;
+		max-width: 250px !important;
+		height: 100%;
+		max-height: 592px !important;
+		border-radius: 35px !important;
+	}
+	#app-screen {
+		width: 100%;
+		height: 100%;
+		border-radius: 45px 45px 35px 35px;
 	}
 	
 	#download-app{
@@ -35,7 +44,15 @@
 	#download-section{
 		margin-right: none;
 	}
+
+	#android-download-btn {
+		background-color: #796700 !important;
+	}
 	
+	#android-download-btn p{
+		color: white !important;
+	}
+
 }
 
 @media (min-width: 768px){
@@ -57,6 +74,14 @@
 	
 	#img-container{
 		display: none;
+	}
+
+	#footer {
+		display: flex !important;
+		flex-direction: row !important;
+		justify-content: space-evenly;
+		padding-top: 20px;
+		padding-bottom: 30px !important;
 	}
 }
 
