--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -48,7 +48,7 @@
     width: 100%;
     max-width: 320px;
     height: 100%;
-    max-height: 572px;
+    max-height: 592px;
     margin: 0 35px;
     border-radius: 45px;
     background-color: white;
@@ -139,4 +139,9 @@
 }
 #bottom-decoration {
     position: relative;
+}
+#footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
