--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,14 @@ a {
     text-decoration: none;
 }
 
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 
 .triangle{
     position: absolute;
