update: estilização do footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,10 @@
+@media (max-width: 767px) {
+    #point-1 {
+		color: red;
+		opacity: 0;
+	}
+}
+
 #rede-sociais{
     display: flex; 
     flex-direction: column;
