--- a/styles/desktop_style.css
+++ b/styles/desktop_style.css
@@ -27,11 +27,6 @@
 		max-height: 592px !important;
 		border-radius: 35px !important;
 	}
-	#app-screen {
-		width: 100%;
-		height: 100%;
-		border-radius: 45px 45px 35px 35px;
-	}
 	
 	#download-app{
 		padding-top: 1.5rem; 
@@ -85,8 +80,12 @@
 	}
 }
 
+@media (max-width: 767px){
+	
+}
+
 @media(min-width: 364px){
 	#app-screen{
-		max-height: 512px;
+		max-height: 572px;
 	}
 }
