--- a/styles/download_app_modal.css
+++ b/styles/download_app_modal.css
@@ -1,39 +1,47 @@
-html {
-    scroll-behavior: smooth;
-}
 #download-app-modal {
-    z-index: 5;
-    display: none;
-    place-items: center;
-    position: absolute;
+    background-color: rgba(0, 0, 0, 0.842);
+
+    position: fixed;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.842);
+
+    display: none;
+    place-items: center;
+    justify-content: center;
+
+    z-index: 5;
 }
+
 #modal-card {
     position: relative;
+    width: 310px;
+    height: 400px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    width: 310px;
-    height: 400px;
+    
     border-radius: 20px;
     background-color: #F5F5F5;
 }
 #close-modal {
+    background: #F5F5F5;
+    width: 30px;
+    height: 30px;
+
     position: absolute;
     top: 15px;
     right: 15px;
+
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #F5F5F5;
+    
     border: 2px solid black;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    
     cursor: pointer;
 }
 #close-modal p {
