update: move o estilo aplicado ao html para o style.css
Pra deixar separado o css que faz em qual parte

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--bgcolor-dark);
     height: 100vh;
